# Day-Rater

./: CMakeLists.txt  Main.qml  TimeSelector.qml  main.cpp  resources.qrc
